--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     </div>
     <div class="wcu-section p-5"  id="sectionwhy">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 col-sm-12">
           <h1 class="wcu-heading">Why Choose Us?</h1>
           <p class="wcu-caption">We use both original recepies and classic versions of famous food items</p>
         </div>
-        <div class="col-12 col-md-4 ">
+        <div class="col-12 col-md-4 col-sm-12">
           <div class="wcu-card text-center mb-3 p-3">
             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-serve.png" class="wcu-card-img">
             <h1 class="wcu-card-title pt-3">Food Service</h1>            
             <p class="wcu-card-description">Experience fine dining at the comfort of your<br> home. All our orders are carefully packed<br> and arranged to give you the nothing less<br> than perfect.</p>
           </div>
         </div>
-        <div class="col-12 col-md-4 ">
+        <div class="col-12 col-md-4 col-sm-12 ">
           <div class="wcu-card text-center mb-3 p-3">
             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/fruits-img.png" class="wcu-card-img">
             <h1 class="wcu-card-title pt-3">Fresh Food</h1>            
@@ -73,7 +73,7 @@
               you always get them tree to plate.</p>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 col-sm-12">
           <div class="wcu-card text-center  mb-3 p-3">
             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/offers-img.png" class="wcu-card-img">
             <h1 class="wcu-card-title pt-3">Best Offers</h1>            
@@ -90,7 +90,7 @@
           <div class="col-12">
             <h1 class="em-heading pb-3">Explore Menu</h1>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12">
             <div class="em-card p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-ginger-fried-img.png" class="em-card-img">
               <h1 class="em-title">Non-Veg Starters</h1>
@@ -101,7 +101,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12">
             <div class="em-card p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-veg-starters-img.png" class="em-card-img">
               <h1 class="em-title">Veg Starters</h1>
@@ -112,7 +112,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12 ">
             <div class="em-card  p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-soup-img.png" class="em-card-img">
               <h1 class="em-title">Soups</h1>
@@ -123,7 +123,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12">
             <div class="em-card  p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-grilled-seafood-img.png" class="em-card-img">
               <h1 class="em-title">Fish and Sea Food</h1>
@@ -134,7 +134,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12">
             <div class="em-card p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-hyderabadi-biryani-img.png" class="em-card-img">
               <h1 class="em-title">Main Course</h1>
@@ -145,7 +145,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12">
             <div class="em-card p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-mushroom-noodles-img.png" class="em-card-img">
               <h1 class="em-title">Noodles</h1>
@@ -156,7 +156,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12 ">
             <div class="em-card p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-gluten-img.png"
                class="em-card-img">
@@ -168,7 +168,7 @@
               </a>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 ">
+          <div class="col-12 col-md-6 col-lg-3 col-sm-12">
             <div class="em-card p-3 mb-3 shadow">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-coffee-bourbon-img.png" class="em-card-img">
               <h1 class="em-title">Desserts</h1>
@@ -185,13 +185,13 @@
     <div class="hf-section p-5">
       <div class="container">
         <div class="row">
-          <div class="col-12  col-md-5">
+          <div class="col-12  col-md-5 col-sm-12">
             <div class="text-center">
               <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/healthy-food-plate-img.png" alt="" class="hf-img">
             </div>
             
           </div>
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-7 col-sm-12">
             <h1 class="hf-title">Fresh,Healthy,Organic,Delicious Fruits</h1>
             <p class="hf-description">Say no to harmful chemicals and go fully organic with our range of
               fresh fruits and veggies. Pamper your body and your senses with
@@ -205,13 +205,13 @@
     <div class="dandp-section p-5" id="dandp-section">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-4 order-md-2">
+          <div class="col-12 col-md-4 order-md-2 col-sm-12">
             <img
             src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/delivery-payment-section-img.png"
             class="dp-img"
           />
           </div>
-          <div class="col-12 col-md-8 order-md-1">
+          <div class="col-12 col-md-8 order-md-1 col-sm-12">
             <h1 class="dp-heading">
               Delivery and Payment
             </h1>
@@ -248,7 +248,7 @@
     <div class="thank-section p-5" id="thank-section">
       <div class="container ">
         <div class="row">
-          <div class="col-12 col-md-8 order-md-1 d-flex flex-column justify-content-center ">
+          <div class="col-12 col-md-8 order-md-1 col-sm-12 d-flex flex-column justify-content-center ">
             <h1 class="thank-heading">
               Thank you for being a valuable customer to us.
             </h1>
@@ -287,7 +287,7 @@
   </div>
 </div>
           </div>
-          <div class="d-none d-md-inline col-md-4 order-md-2">
+          <div class="d-none d-md-inline col-md-4  order-md-2">
             <img
             src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/thanking-customers-section-img.png"
             class="thanking-customers-section-img"
@@ -300,10 +300,10 @@
     <div class="follow-us-section pt-5 pb-5" id="followUsSection">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 col-sm-12">
             <h1 class="follow-us-section-heading">Follow Us</h1>
           </div>
-          <div class="col-12">
+          <div class="col-12 col-sm-12">
             <div class="d-flex flex-row justify-content-center">
               <div class="follow-us-icon-container">
                 <i class="fab fa-twitter icon"></i>
@@ -322,7 +322,7 @@
     <div class="footer-section pt-5 pb-5">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 col-sm-12 text-center">
             <img
               src="pngtree-chef-restaurant-logo-png-image_6136204.png"
               class="logo"
